# Learning-Crypto-parser-site-telegram

./: .env  main.py  pyproject.toml
handlers/: menu.py  parser.py  telegram.py
